2008-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-elips.el: Depend on sb-mailman.el.
	(shimbun-elips-url): Update.

	* sb-mailman.el (shimbun-mailman-header): Work for yearly archives.

2008-03-27  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-impress.el (shimbun-impress-ignored-subject-regexp): New variable.
	(shimbun-headers): Use it.

2008-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-get-headers): Remove ads.
	(shimbun-rss-build-message-id): New function that doesn't strip string
	following "?" or "#" in url when calculating its md5.

2008-03-21  David Engster  <dengste@eml.cc>

	* sb-heise.el (shimbun-heise-get-newsticker-headers): Adapt to the new
	URL scheme on http://www.heise.de/newsticker.

2008-02-24  David Hansen  <david.hansen@gmx.net>

	* sb-heise.el (shimbun-heise-wash-telepolis-article): relax ad
	filtering regexp.

	* sb-spiegel.el (shimbun-spiegel-content-start): Follow page layout
	changes.
	(shimbun-spiegel-x-face-alist): New variable.

2008-01-29  David Engster  <dengste@eml.cc>

	* sb-debugmagazin-de.el, sb-perlentaucher-de.el, sb-slashdot.el
	* sb-sueddeutsche-de.el: New files.

2008-01-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-retry-fetching): New user option.
	(shimbun-retry-fetching): New function.
	(shimbun-fetch-url): Use it.

	* sb-itmedia.el (shimbun-itmedia-retry-fetching): New variable.

	* sb-rss.el (shimbun-rss-get-headers): Protect against null title.

2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents): Add Japanese title
	and words to articles in weekly group.

2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-decode-anchor-string): New alias to
	w3m-decode-anchor-string.
	(shimbun-mime-replace-image-tags): Use it to decode "&amp;" to "&" in
	url string.

	* sb-pocketgames.el (shimbun-get-headers): Use
	shimbun-decode-anchor-string instead of w3m-decode-anchor-string.
